fix(amazon): [NKD-3273][Checkout 1] Amazon pay - text does not fit

--- a/src/Amazon_Pay/web/css/source/module.scss
+++ b/src/Amazon_Pay/web/css/source/module.scss
@@ -30,14 +30,29 @@ $amazon-pay_login-block-width: calc(50% - 3rem) !default;
 }
 
 .amazon-divider {
-    border-bottom: 1px solid $amazon-pay_divider-color;
-    line-height: 0.1em;
-    margin: 2rem 0;
+    line-height: 150%;
+    padding: 2rem;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: 50%;
+        width: 100%;
+        height: 0.1rem;
+        background: $amazon-pay_divider-color;
+        left: 0;
+    }
 
     span {
         background: $amazon-pay_divider-text-background;
         padding: 0 0.5rem;
+        position: relative;
+        z-index: 1;
     }
 }
 
